Version 0.3:

	* Support b33r card
	* board ordering knows about sections and vulnerabilities
	* --setsize parameter to check sets of n boards per round for matching 
	  pair numbers
	* output hands within boards sorted by NS pair number (Suggested by
	  Carrie Oliver <cho21 -at- cam -dot- ac -dot- uk>)
	* gsalliere graphical frontend
	* get version from jar
	* add itext to INSTALL info
	* don't write files when they weren't modified
	* check that only NSEW can be declarer

Version 0.2:

	* Only divide by the number of boards played for percentages, not all of 
	  them (Spotted by Elizabeth Roberts <ehr24 -at- cam -dot- ac -dot- uk>
	* Output to file and output in HTML and PDF formats.
	* Calculate LP/OPs
	* Support section numbering for boards
	* Support vulnerability overriding
	* Support passouts
	* Pass through averages without scoring
	* Assorted bug fixes

Version 0.1:

	* Initial release of salliere